# securevibes

./: .droid-preferences.md  .gitignore  AGENTS.md  DAST_IMPLEMENTATION_PROGRESS.md  README.md
.factory/: custom-droid-ideas.md  preferences.md
.factory/droids/: security-audit.yaml
docs/: AGENT_SKILLS_GUIDE.md  ARCHITECTURE.md  CONTEXT_STORAGE_ARCHITECTURE.md  DAST_GUIDE.md  DAST_MVP_PLAN.md  DAST_SUB_AGENT_PROPOSAL.md  EVAL_FRAMEWORK.md  MAINTENANCE.md  STREAMING_MODE.md  architecture-pr-review-pipeline.md  design-threat-aware-chunking.md  design-threat-aware-incremental-scanning.md  plan-phoenix-phases.md
docs/example-reports/: securevibes_bandit.md  securevibes_cc_sonnet45.md  securevibes_codex_gpt5high.md  securevibes_custom_droid_sonnet45.md  securevibes_droid_glm46.md  securevibes_haiku.md  (+4 more)
evals/: .gitignore  README.md  pyproject.toml
evals/fixtures/secure-express-app/: app.js  database.js  package.json
evals/fixtures/vulnerable-flask-app/: app.py
evals/harness/: __init__.py  runner.py
evals/harness/graders/: __init__.py  base.py  code_graders.py  model_graders.py
evals/results/: .gitkeep
evals/rubrics/: threat_model_quality.md  vulnerability_quality.md
evals/schemas/: scan_results.schema.json  task.schema.json  threat_model.schema.json
evals/tasks/capability/false-positive/parameterized-queries/: task.yaml
evals/tasks/capability/vuln-detection/sqli/: task.yaml
evals/tasks/regression/schema-validation/: task.yaml
ops/: E2E_TEST_GHSA_GV46.md  PLAN.md  incremental_scan.py  prepare_risk_map.py
securevibes-skill/: SKILL.md
(+139 files in other folders)
